fix(user): chagning followers and followings response shema, fixing swagger
